tests/snapshots/snapshots__budget_python_dotenv_src_dotenv_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (999 tokens)

__init__.py
     3→from .main …
     6→def load_ipython_extension …
    12→def get_cli_string …
    42→__all__ = [

__main__.py
     3→from .cli import cli

cli.py
    20→from .main …
    21→from .version …
    24→def enumerate_env …
    62→def cli(ctx: click.Context, file: Any, quote: Any, export: Any) -> None:
    68→def stream_file(path: os.PathLike) -> Iterator[IO[str]]:
    93→def list_values …
   116→def set_value(ctx: click.Context, key: Any, value: Any) -> None:
   131→def get(ctx: click.Context, key: Any) -> None:
   148→def unset(ctx: click.Context, key: Any) -> None:
   173→def run(ctx: click.Context, override: bool, commandline: tuple[str, ...]) -> None:
   193→def run_command …

ipython.py
     2→from IPython.core.magic_arguments …
     8→from .main import find_dotenv, load_dotenv
    12→class IPythonDotEnv(Magics):
    13→    @magic_arguments()
    14→    @argument(
    33→    @line_magic
    34→    def dotenv(self, line):
    48→def load_ipython_extension(ipython):

main.py
    13→from .parser import Binding, parse_stream
    14→from .variables import parse_variables
    35→def with_warn_for_invalid_lines …
    45→class DotEnv:
    46→    def __init__ …
    64→    def _get_stream(self) -> Iterator[IO[str]]:
    78→    def dict …
    94→    def parse …
   100→    def set_as_environment_variables …
   115→    def get …
   128→def get_key …
   142→def rewrite …
   163→def set_key …
   211→def unset_key …
   244→def resolve_variables …
   287→def find_dotenv …
   338→def load_dotenv …
   387→def dotenv_values …

parser.py
    14→def make_regex …
    35→class Original(NamedTuple):
    40→class Binding(NamedTuple):
    47→class Position:
    48→    def __init__ …
    52→    @classmethod
    53→    def start(cls) -> "Position":
    56→    def set …
    60→    def advance …
    65→class Error(Exception):
    69→class Reader:
    70→    def __init__ …
    75→    def has_next …
    78→    def set_mark …
    81→    def get_marked …
    87→    def peek …
    90→    def read …
    97→    def read_regex …
   105→def decode_escapes …
   112→def parse_key …
   123→def parse_unquoted_value …
   128→def parse_value …
   142→def parse_binding …
   179→def parse_stream …

variables.py
    18→class Atom(metaclass=ABCMeta):
    19→    def __ne__(self, other: object) -> bool:
    25→    @abstractmethod
    26→    def resolve(self, env: Mapping[str, Optional[str]]) -> str: ...
    29→class Literal(Atom):
    30→    def __init__(self, value: str) -> None:
    33→    def __repr__(self) -> str:
    36→    def __eq__(self, other: object) -> bool:
    41→    def __hash__(self) -> int:
    44→    def resolve(self, env: Mapping[str, Optional[str]]) -> str:
    48→class Variable(Atom):
    49→    def __init__(self, name: str, default: Optional[str]) -> None:
    53→    def __repr__(self) -> str:
    56→    def __eq__(self, other: object) -> bool:
    61→    def __hash__(self) -> int:
    64→    def resolve(self, env: Mapping[str, Optional[str]]) -> str:
    70→def parse_variables(value: str) -> Iterator[Atom]:

version.py
     1→__version__ = "1.2.1"
