tests/snapshots/snapshots__budget_python_dotenv_src_dotenv_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4050 tokens)

__init__.py
     1→from typing …
     3→from .main import dotenv_values, find_dotenv, get_key, load_dotenv, set_key, unset_key
     6→def load_ipython_extension(ipython: Any) -> None:
    12→def get_cli_string(
    13→    path: Optional[str] = None,
    14→    action: Optional[str] = None,
    15→    key: Optional[str] = None,
    16→    value: Optional[str] = None,
    17→    quote: Optional[str] = None,
    18→):
    19→    """Returns a string suitable for running as a shell script.
    20→
    21→    Useful for converting a arguments passed to a fabric task
      →    …
    42→__all__ = [
    43→    "get_cli_string",
    44→    "load_dotenv",
    45→    "dotenv_values",
    46→    "get_key",
    47→    "set_key",
    48→    "unset_key",
      →    …

__main__.py
     3→from .cli import cli

cli.py
     1→import json …
     2→import os …
     3→import shlex …
     4→import sys …
     5→from contextlib …
     6→from typing …
     9→    from subprocess …
    12→    import click …
    20→from .main import dotenv_values, set_key, unset_key
    21→from .version import __version__
    24→def enumerate_env() -> Optional[str]:
    25→    """
    26→    Return a path for the ${pwd}/.env file.
    27→
      →…
    60→@click.version_option(version=__version__)
    61→@click.pass_context
    62→def cli(ctx: click.Context, file: Any, quote: Any, export: Any) -> None:
    63→    """This script is used to set, get or unset values from a .env file."""
    64→    ctx.obj = {"QUOTE": quote, "EXPORT": export, "FILE": file}
    67→@contextmanager
    68→def stream_file(path: os.PathLike) -> Iterator[IO[str]]:
    69→    """
    70→    Open a file and yield the corresponding (decoded) stream.
    71→
    72→    Exits with error code 2 if the file cannot be opened.
    73→    """
    74→
    75→    try:
    76→        with open(path) as stream:
    77→            yield stream
    78→    except OSError as exc:
      →    …
    93→def list_values(ctx: click.Context, output_format: str) -> None:
    94→    """Display all the stored key/value."""
   112→@cli.command(name="set")
   113→@click.pass_context
   114→@click.argument("key", required=True)
   115→@click.argument("value", required=True)
   116→def set_value(ctx: click.Context, key: Any, value: Any) -> None:
   117→    """Store the given key/value."""
   118→    file = ctx.obj["FILE"]
   119→    quote = ctx.obj["QUOTE"]
   120→    export = ctx.obj["EXPORT"]
   121→    success, key, value = set_key(file, key, value, quote, export)
   122→    if success:
      →    …
   128→@cli.command()
   129→@click.pass_context
   130→@click.argument("key", required=True)
   131→def get(ctx: click.Context, key: Any) -> None:
   132→    """Retrieve the value for the given key."""
   133→    file = ctx.obj["FILE"]
   134→
   135→    with stream_file(file) as stream:
   136→        values = dotenv_values(stream=stream)
   137→
      →…
   145→@cli.command()
   146→@click.pass_context
   147→@click.argument("key", required=True)
   148→def unset(ctx: click.Context, key: Any) -> None:
   149→    """Removes the given key."""
   150→    file = ctx.obj["FILE"]
   151→    quote = ctx.obj["QUOTE"]
   152→    success, key = unset_key(file, key, quote)
   153→    if success:
   154→        click.echo(f"Successfully removed {key}")
      →        …
   172→@click.argument("commandline", nargs=-1, type=click.UNPROCESSED)
   173→def run(ctx: click.Context, override: bool, commandline: tuple[str, ...]) -> None:
   174→    """Run command with environment variables present."""
   175→    file = ctx.obj["FILE"]
   176→    if not os.path.isfile(file):
   177→        raise click.BadParameter(
   178→            f"Invalid value for '-f' \"{file}\" does not exist.", ctx=ctx
   179→        )
      →        …
   193→def run_command(command: List[str], env: Dict[str, str]) -> None:
   194→    """Replace the current process with the specified command.
   195→
   196→    Replaces the current process with the specified command and the variables from `env`
      →    …

ipython.py
     1→from IPython.core.magic …
     2→from IPython.core.magic_arguments import (
     3→    argument,
     4→    magic_arguments,
     5→    parse_argstring,
     6→)  # type: ignore
     8→from .main import find_dotenv, load_dotenv
    11→@magics_class
    12→class IPythonDotEnv(Magics):
    13→    @magic_arguments()
    14→    @argument(
    15→        "-o",
    16→        "--override",
    17→        action="store_true",
    18→        help="Indicate to override existing variables",
    19→    )
    20→    @argument(
    21→        "-v",
    22→        "--verbose",
    23→        action="store_true",
    24→        help="Indicate function calls to be verbose",
    25→    )
    26→    @argument(
    27→        "dotenv_path",
    28→        nargs="?",
    29→        type=str,
    30→        default=".env",
    31→        help="Search in increasingly higher folders for the `dotenv_path`",
    32→    )
    33→    @line_magic
    34→    def dotenv(self, line):
    35→        args = parse_argstring(self.dotenv, line)
    36→        # Locate the .env file
    37→        dotenv_path = args.dotenv_path
    38→        try:
    39→            dotenv_path = find_dotenv(dotenv_path, True, True)
      →            …
    48→def load_ipython_extension(ipython):
    49→    """Register the %dotenv magic."""

main.py
     1→import io …
     2→import logging …
     3→import os …
     4→import pathlib …
     5→import shutil …
     6→import stat …
     7→import sys …
     8→import tempfile …
     9→from collections …
    10→from contextlib …
    11→from typing …
    13→from .parser import Binding, parse_stream
    14→from .variables import parse_variables
    25→def _load_dotenv_disabled() -> bool:
    26→    """
    27→    Determine if dotenv loading has been disabled.
    28→    """
    29→    if "PYTHON_DOTENV_DISABLED" not in os.environ:
    30→        return False
      →        …
    35→def with_warn_for_invalid_lines(mappings: Iterator[Binding]) -> Iterator[Binding]:
    45→class DotEnv:
    46→    def __init__(
    47→        self,
    48→        dotenv_path: Optional[StrPath],
    49→        stream: Optional[IO[str]] = None,
    50→        verbose: bool = False,
    51→        encoding: Optional[str] = None,
    52→        interpolate: bool = True,
    53→        override: bool = True,
    54→    ) -> None:
    63→    @contextmanager
    64→    def _get_stream(self) -> Iterator[IO[str]]:
    65→        if self.dotenv_path and _is_file_or_fifo(self.dotenv_path):
    66→            with open(self.dotenv_path, encoding=self.encoding) as stream:
    67→                yield stream
    68→        elif self.stream is not None:
    69→            yield self.stream
    70→        else:
    71→            if self.verbose:
    72→                logger.info(
    73→                    "python-dotenv could not find configuration file %s.",
    74→                    self.dotenv_path or ".env",
    75→                )
    76→            yield io.StringIO("")
    78→    def dict(self) -> Dict[str, Optional[str]]:
    79→        """Return dotenv as dict"""
    94→    def parse(self) -> Iterator[Tuple[str, Optional[str]]]:
   100→    def set_as_environment_variables(self) -> bool:
   101→        """
   102→        Load the current dotenv as system environment variable.
   103→        """
   115→    def get(self, key: str) -> Optional[str]:
   116→        """ """
   128→def get_key(
   129→    dotenv_path: StrPath,
   130→    key_to_get: str,
   131→    encoding: Optional[str] = "utf-8",
   132→) -> Optional[str]:
   133→    """
   134→    Get the value of a given key from the given .env.
   135→
      →…
   141→@contextmanager
   142→def rewrite(
   143→    path: StrPath,
   144→    encoding: Optional[str],
   145→) -> Iterator[Tuple[IO[str], IO[str]]]:
   146→    pathlib.Path(path).touch()
   147→
   148→    with tempfile.NamedTemporaryFile(mode="w", encoding=encoding, delete=False) as dest:
   149→        error = None
   150→        try:
      →        …
   163→def set_key(
   164→    dotenv_path: StrPath,
   165→    key_to_set: str,
   166→    value_to_set: str,
   167→    quote_mode: str = "always",
   168→    export: bool = False,
   169→    encoding: Optional[str] = "utf-8",
   170→) -> Tuple[Optional[bool], str, str]:
   171→    """
   172→    Adds or Updates a key/value to the given .env
   173→
      →…
   211→def unset_key(
   212→    dotenv_path: StrPath,
   213→    key_to_unset: str,
   214→    quote_mode: str = "always",
   215→    encoding: Optional[str] = "utf-8",
   216→) -> Tuple[Optional[bool], str]:
   217→    """
   218→    Removes a given key from the given `.env` file.
   219→
      →…
   244→def resolve_variables(
   245→    values: Iterable[Tuple[str, Optional[str]]],
   246→    override: bool,
   247→) -> Mapping[str, Optional[str]]:
   269→def _walk_to_root(path: str) -> Iterator[str]:
   270→    """
   271→    Yield directories starting from the given directory up to the root
   272→    """
   273→    if not os.path.exists(path):
   274→        raise IOError("Starting path not found")
      →        …
   287→def find_dotenv(
   288→    filename: str = ".env",
   289→    raise_error_if_not_found: bool = False,
   290→    usecwd: bool = False,
   291→) -> str:
   292→    """
   293→    Search in increasingly higher folders for the given file
   294→
      →…
   338→def load_dotenv(
   339→    dotenv_path: Optional[StrPath] = None,
   340→    stream: Optional[IO[str]] = None,
   341→    verbose: bool = False,
   342→    override: bool = False,
   343→    interpolate: bool = True,
   344→    encoding: Optional[str] = "utf-8",
   345→) -> bool:
   346→    """Parse a .env file and then load all the variables found as environment variables.
   347→
   348→    Parameters:
      →    …
   387→def dotenv_values(
   388→    dotenv_path: Optional[StrPath] = None,
   389→    stream: Optional[IO[str]] = None,
   390→    verbose: bool = False,
   391→    interpolate: bool = True,
   392→    encoding: Optional[str] = "utf-8",
   393→) -> Dict[str, Optional[str]]:
   394→    """
   395→    Parse a .env file and return its content as a dict.
   396→
      →…
   423→def _is_file_or_fifo(path: StrPath) -> bool:
   424→    """
   425→    Return True if `path` exists and is either a regular file or a FIFO.
   426→    """
   427→    if os.path.isfile(path):
   428→        return True
      →        …

parser.py
     1→import codecs …
     2→import re …
     3→from typing …
    14→def make_regex(string: str, extra_flags: int = 0) -> Pattern[str]:
    35→class Original(NamedTuple):
    36→    string: str
    37→    line: int
    40→class Binding(NamedTuple):
    41→    key: Optional[str]
    42→    value: Optional[str]
    43→    original: Original
    44→    error: bool
    47→class Position:
    48→    def __init__(self, chars: int, line: int) -> None:
    52→    @classmethod
    53→    def start(cls) -> "Position":
    54→        return cls(chars=0, line=1)
    56→    def set(self, other: "Position") -> None:
    60→    def advance(self, string: str) -> None:
    65→class Error(Exception):
    66→    pass
    69→class Reader:
    70→    def __init__(self, stream: IO[str]) -> None:
    75→    def has_next(self) -> bool:
    78→    def set_mark(self) -> None:
    81→    def get_marked(self) -> Original:
    87→    def peek(self, count: int) -> str:
    90→    def read(self, count: int) -> str:
    97→    def read_regex(self, regex: Pattern[str]) -> Sequence[str]:
   105→def decode_escapes(regex: Pattern[str], string: str) -> str:
   112→def parse_key(reader: Reader) -> Optional[str]:
   123→def parse_unquoted_value(reader: Reader) -> str:
   128→def parse_value(reader: Reader) -> str:
   142→def parse_binding(reader: Reader) -> Binding:
   179→def parse_stream(stream: IO[str]) -> Iterator[Binding]:

variables.py
     1→import re …
     2→from abc …
     3→from typing …
     5→_posix_variable: Pattern[str] = re.compile(
     6→    r"""
     7→    \$\{
     8→        (?P<name>[^\}:]*)
     9→        (?::-
    10→            (?P<default>[^\}]*)
    11→        )?
    12→    \}
    13→    """,
    14→    re.VERBOSE,
    15→)
    18→class Atom(metaclass=ABCMeta):
    19→    def __ne__(self, other: object) -> bool:
    25→    @abstractmethod
    26→    def resolve(self, env: Mapping[str, Optional[str]]) -> str: ...
    29→class Literal(Atom):
    30→    def __init__(self, value: str) -> None:
    33→    def __repr__(self) -> str:
    36→    def __eq__(self, other: object) -> bool:
    41→    def __hash__(self) -> int:
    44→    def resolve(self, env: Mapping[str, Optional[str]]) -> str:
    48→class Variable(Atom):
    49→    def __init__(self, name: str, default: Optional[str]) -> None:
    53→    def __repr__(self) -> str:
    56→    def __eq__(self, other: object) -> bool:
    61→    def __hash__(self) -> int:
    64→    def resolve(self, env: Mapping[str, Optional[str]]) -> str:
    70→def parse_variables(value: str) -> Iterator[Atom]:

version.py
     1→__version__ = "1.2.1"
